23 Jun 2003 Fix interrupt queue problem in haltio - Fish (by Greg Smith)
17 Jun 2003 dyninst now supports dynamic instruction update - Jan Jaeger
15 Jun 2003 Add dynamic module preloading - Jan Jaeger
15 Jun 2003 Add version and dependency checks to dynamic loader - Jan Jaeger
11 Jun 2003 More message numbers - Greg Smith
05 Jun 2003 Dynamic loader support - Jan Jaeger
05 Jun 2003 Preliminary substitution capabilities in config file.
            Substitution format is $(varname).
            Current vars are cuu,ccuu,CUU,CCUU - Ivan Warren
04 Jun 2003 Device number specification extension. Device numbers are now
            CUU or CUU-CUU or CUU.count or CUU,CUU or a combination
            of the above - Ivan Warren
01 Jun 2003 Updated hercconf.html page to include ECPS:VM,
            2703, 3410, 3490, 9347 D/T and explanation for
            2703 parameters - Ivan Warren
29 May 2003 Correction to diagnose 0 to use real address - Jan Jaeger
28 May 2003 Use unix sockets for localhost shared devices - Greg Smith
26 May 2003 Yet another round for channel.c locking - Greg Smith
26 May 2003 Fixes and performance enhancements for shared devices - Greg Smith
23 May 2003 Locate Block logic fix - Ivan Warren, Suggested by *Anonymous*
23 May 2003 Provide command response in DIAG 8 resp buffer - Ivan Warren
22 May 2003 Add CPUVERID config statement to set version code - Jan Jaeger
22 May 2003 Add DIAG8CMD config statement to enable diag 8 commands - Jan Jaeger
21 May 2003 Fix spec exception in LPSW on incorrect amode settings - Jan Jaeger
19 May 2003 Close all FDs before forking hercifc - Ivan Warren
18 May 2003 Fix incorrect amask in LPSW in 64 bit mode - Jan Jaeger
15 May 2003 Fixed cygwin regparm bug check bug in configure.ac:
            __attribute__ ((regparm(3))) in wrong place - Fish
15 May 2003 Created "destroy_lock" and "destroy_condition" macros;
            added support destroying locks/conds to fthreads - Fish