@@ -1,3 +1,4 @@
+25 Jun 2003 Add dyninst qualifier to dynamic instr. symbol names - Jan Jaeger
 23 Jun 2003 Fix interrupt queue problem in haltio - Fish (by Greg Smith)
 17 Jun 2003 dyninst now supports dynamic instruction update - Jan Jaeger
 15 Jun 2003 Add dynamic module preloading - Jan Jaeger
